--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <version>3.47.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>6.2.1</version>
+        </dependency>
+
 
     </dependencies>
 
